--- a/cubes.css
+++ b/cubes.css
@@ -1,4 +1,36 @@
 #featuredWidget{
+-webkit-perspective: 1150px;
+-webkit-perspective-origin: 50% 50%;
+}
+#fpane{
 -webkit-transition: -webkit-transform 2s linear;
 -webit-transform-style: preserve-3d;
+position:relative !important;
+
+}
+
+#fpane > div:first-child{
+-webkit-transform: rotateX(90deg) translateZ(200px);
+-moz-transform: rotateX(90deg) translateZ(200px);
+}
+
+#fpane > div:first-child(2) {
+-webkit-transform: translateZ(200px);
+-moz-transform: translateZ(200px);
+}
+
+#fpane > div:nth-child(3) {
+-webkit-transform: rotateY(90deg) translateZ(200px);
+-moz-transform: rotateY(90deg) translateZ(200px);
+text-align: center;
+}
+
+#fpane > div:nth-child(4) {
+-webkit-transform: rotateY(180deg) translateZ(200px);
+-moz-transform: rotateY(180deg) translateZ(200px);
+}
+
+#fpane > div:nth-child(5) {
+-webkit-transform: rotateY(-90deg) translateZ(200px);
+-moz-transform: rotateY(-90deg) translateZ(200px);
 }
